--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ repositories {
 
 dependencies {
     compile 'org.codehaus.groovy:groovy-all:2.3.4'
+    compile 'org.gcontracts:gcontracts-core:1.2.12'
     testCompile 'junit:junit:4.11'
 }
 
