--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ dependencies {
     compile 'org.gcontracts:gcontracts-core:1.2.12'
     testCompile 'junit:junit:4.11'
     testCompile 'org.spockframework:spock-core:0.7-groovy-2.0'
+    testCompile 'com.cyrusinnovation:mockito-groovy-support:1.3'
 }
 
 idea.project.ipr {
